# mdecho

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh  flake.nix  home.css  index.html  style.css
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: igcn1vcipswpfhns42yhrl7lra3pg6wf-source  n8gf8yr0571s1ld4nr6dmk143iv3rvmh-source
.github/workflow/: tag.yml  test.yml
js/: theme.js
pkg/: README.md  mdecho.d.ts  mdecho.js  mdecho_bg.wasm  mdecho_bg.wasm.d.ts  package.json
src/: lib.rs  main.rs
static/css/: home.css
static/js/: editor.js  toggle_theme.js
static/js/editor/: editor.js  prev_editor.js
static/js/keymap/: vim.js
static/js/theme/: prev_theme.js
templates/: home.html
