[package]
name = "mdecho"
version = "0.2.0"
edition = "2024"
authors = ["Santosh Shrestha <santoshxshrstha@gmail.com>"]
description = "A Markdown to sanitized HTML converter."
license = "MIT"
homepage = "https://santoshxshrestha.github.io/mdecho/"
documentation = "https://github.com/santoshxshrestha/mdecho#readme"
repository = "https://github.com/santoshxshrestha/mdecho"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
ammonia = "4.1.1"
pulldown-cmark = "0.13.0"
wasm-bindgen = "0.2.105"
